[gd_scene load_steps=14 format=3 uid="uid://bqsrwpb82r34v"]

[ext_resource type="Texture2D" uid="uid://y8c4a1bk8wkl" path="res://assets/images/menus/menuBGDesat.png" id="1_002pm"]
[ext_resource type="Script" path="res://scenes/HUDEditor.gd" id="1_028jv"]
[ext_resource type="Theme" uid="uid://4futibrds7cj" path="res://assets/styles/NULL/purple.tres" id="2_p2wl7"]
[ext_resource type="Script" path="res://scenes/options/Checkbox.gd" id="3_0xuk5"]
[ext_resource type="FontFile" uid="uid://coqcg7h14duny" path="res://assets/fonts/vcr.ttf" id="3_h7qg7"]
[ext_resource type="StyleBox" uid="uid://c4lt0ydus4t75" path="res://assets/styles/healthbar/opponent.tres" id="3_uow7h"]
[ext_resource type="Script" path="res://scenes/options/HUDPreview.gd" id="3_xc1l4"]
[ext_resource type="StyleBox" uid="uid://ccmycpgoa47g0" path="res://assets/styles/healthbar/player.tres" id="4_8nyy7"]
[ext_resource type="Script" path="res://scenes/options/BindButton.gd" id="5_6jcsd"]
[ext_resource type="Script" path="res://scenes/options/SpinBox.gd" id="10_dvgfv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2nblc"]
content_margin_bottom = 256.0

[sub_resource type="Animation" id="Animation_q580i"]
resource_name = "hidden"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -0.5),
"update": 0,
"values": [Vector2(8, 8), Vector2(-400, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldd0u"]
_data = {
"hidden": SubResource("Animation_q580i")
}

[node name="HUD Editor" type="Node2D"]
script = ExtResource("1_028jv")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_002pm")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_xc1l4")

[node name="HealthBar" type="ColorRect" parent="HUD"]
offset_left = 340.0
offset_top = 636.0
offset_right = 941.0
offset_bottom = 655.0
color = Color(0, 0, 0, 1)

[node name="ProgressBar" type="ProgressBar" parent="HUD/HealthBar"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.5
offset_right = 596.0
offset_bottom = 14.5
theme_override_styles/background = ExtResource("3_uow7h")
theme_override_styles/fill = ExtResource("4_8nyy7")
max_value = 2.0
value = 1.0
fill_mode = 1
show_percentage = false

[node name="ScoreText" type="Label" parent="HUD/HealthBar"]
layout_mode = 0
offset_left = -331.0
offset_top = 47.0
offset_right = 929.0
offset_bottom = 66.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_h7qg7")
theme_override_font_sizes/font_size = 19
text = "Score: 0 - Misses: 0 - Accuracy: 0% [N/A]"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Editor" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="Editor"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 712.0
theme = ExtResource("2_p2wl7")
current_tab = 2
metadata/_edit_lock_ = true

[node name="HUD Editor Options" type="TabBar" parent="Editor/TabContainer"]
visible = false
layout_mode = 2

[node name="BG Color Beat" type="CheckBox" parent="Editor/TabContainer/HUD Editor Options"]
layout_mode = 0
offset_left = 8.0
offset_top = 11.0
offset_right = 261.0
offset_bottom = 35.0
text = "Change BG color on beat?"
script = ExtResource("3_0xuk5")
option = "bg color beat"

[node name="BindButton" type="Button" parent="Editor/TabContainer/HUD Editor Options"]
layout_mode = 0
offset_left = 8.0
offset_top = 59.0
offset_right = 56.0
offset_bottom = 86.0
script = ExtResource("5_6jcsd")
bind = "hud_hide"

[node name="Title" type="Label" parent="Editor/TabContainer/HUD Editor Options/BindButton"]
layout_mode = 0
offset_top = -16.0
offset_right = 141.0
theme = ExtResource("2_p2wl7")
text = "Hide Editor Key"

[node name="Health Bar" type="TabBar" parent="Editor/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_p2wl7")

[node name="Icon Colors" type="CheckBox" parent="Editor/TabContainer/Health Bar"]
layout_mode = 0
offset_left = 8.0
offset_top = 11.0
offset_right = 158.0
offset_bottom = 35.0
tooltip_text = "Uses the main color from the icons"
theme = ExtResource("2_p2wl7")
text = "Icon Colors"
script = ExtResource("3_0xuk5")
option = "icon colors"

[node name="HPBar X" type="SpinBox" parent="Editor/TabContainer/Health Bar"]
layout_mode = 0
offset_left = 8.0
offset_top = 59.0
offset_right = 91.0625
offset_bottom = 90.0
max_value = 1280.0
value = 340.0
suffix = "x"
script = ExtResource("10_dvgfv")
option = "hpbar x"

[node name="Title" type="Label" parent="Editor/TabContainer/Health Bar/HPBar X"]
layout_mode = 0
offset_top = -16.0
offset_right = 150.0
offset_bottom = -1.0
theme = ExtResource("2_p2wl7")
text = "HP Bar X Postion"
metadata/_edit_lock_ = true

[node name="HPBar Y" type="SpinBox" parent="Editor/TabContainer/Health Bar"]
layout_mode = 0
offset_left = 200.0
offset_top = 59.0
offset_right = 283.063
offset_bottom = 90.0
max_value = 720.0
value = 636.0
suffix = "y"
script = ExtResource("10_dvgfv")
option = "hpbar y"

[node name="Title" type="Label" parent="Editor/TabContainer/Health Bar/HPBar Y"]
layout_mode = 0
offset_top = -16.0
offset_right = 150.0
offset_bottom = -1.0
theme = ExtResource("2_p2wl7")
text = "HP Bar Y Postion"
metadata/_edit_lock_ = true

[node name="UseDownScrollPos" type="CheckBox" parent="Editor/TabContainer/Health Bar"]
layout_mode = 0
offset_left = 8.0
offset_top = 115.0
offset_right = 168.0
offset_bottom = 153.0
theme = ExtResource("2_p2wl7")
text = "Use Downscroll
Y Position?"

[node name="HPBar Y DownScroll" type="SpinBox" parent="Editor/TabContainer/Health Bar"]
layout_mode = 0
offset_left = 200.0
offset_top = 123.0
offset_right = 283.063
offset_bottom = 154.0
max_value = 720.0
value = 60.0
suffix = "y"
script = ExtResource("10_dvgfv")
option = "hpbar y down"

[node name="Title" type="Label" parent="Editor/TabContainer/Health Bar/HPBar Y DownScroll"]
layout_mode = 0
offset_top = -32.0
offset_right = 150.0
offset_bottom = 1.0
theme = ExtResource("2_p2wl7")
text = "HP Bar Y Postion
(Downscroll)"
metadata/_edit_lock_ = true

[node name="Score Text" type="TabBar" parent="Editor/TabContainer"]
layout_mode = 2
theme = ExtResource("2_p2wl7")

[node name="ScrollContainer" type="ScrollContainer" parent="Editor/TabContainer/Score Text"]
layout_mode = 0
offset_left = 8.0
offset_top = 11.0
offset_right = 376.0
offset_bottom = 667.0

[node name="VBoxContainer" type="VBoxContainer" parent="Editor/TabContainer/Score Text/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Editor/TabContainer/Score Text/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_p2wl7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2nblc")
text = "--= Score =--"
horizontal_alignment = 1

[node name="hide" type="AnimationPlayer" parent="Editor/TabContainer"]
libraries = {
"": SubResource("AnimationLibrary_ldd0u")
}

[connection signal="pressed" from="Editor/TabContainer/HUD Editor Options/BG Color Beat" to="Editor/TabContainer/HUD Editor Options/BG Color Beat" method="_on_pressed"]
[connection signal="pressed" from="Editor/TabContainer/HUD Editor Options/BindButton" to="Editor/TabContainer/HUD Editor Options/BindButton" method="_on_pressed"]
[connection signal="pressed" from="Editor/TabContainer/Health Bar/Icon Colors" to="Editor/TabContainer/Health Bar/Icon Colors" method="_on_pressed"]
